feat: create subsections for modules

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -258,6 +258,12 @@ These results can support practitioners in the design and development of robotic
 
 \par\textcolor{red}{\textbf{Overall description of your architecture, in the most general terms possible. E.g., no mention of SAM specifically: just a mention of any image-segmentation model. This is meant to describe your architecture so anyone else can build the same, using any other components. Describe the hierarchical planner, how it is used to implement a LAM. Images without specific details (e.g., Figure 2 in your report, and Figure 12, as it was in the presentation, without the ROS-specific details)}}
 
+\subsubsection{Perception Module}
+
+\subsubsection{Automatic Speech Recognition Module}
+
+\subsubsection{Planning Module}
+
 
 \subsection{Symbolic Wrapping of LAMs}
 
@@ -268,10 +274,21 @@ These results can support practitioners in the design and development of robotic
 
 \par\textcolor{red}{\textbf{Virtually identical to previous section, but now precisely describing your prototype. Here, all components are specified, challenges with specific technologies are described, etc. Here is where you show where, e.g., SAM goes in.}}
 
+\subsection{Perception Module}
+
+\subsection{Automatic Speech Recognition Module}
+
+\subsection{Planning Module}
 
 \section{Experiments and Results}
 
 \par\textcolor{red}{\textbf{Description of all experiments you made, and associated results. Tables and plots. Images of simulation and reality, with links to the associated videos.}}
+
+\subsection{Perception Module}
+
+\subsection{Automatic Speech Recognition Module}
+
+\subsection{Planning Module}
 
 
 \section{Related Work}
