feat: add orcid template

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -124,9 +124,10 @@
   \institution{International School of Engineering, Faculty of Engineering, Chulalongkorn University}
   \city{Bangkok}
   \country{Thailand}}
-\email{kanisorn.s@chula.ac.th}
+\email{6538020621@student.chula.ac.th}
 
 \author{Methasit Boonpun}
+\orcid{0009-0000-5772-1325}
 \affiliation{%
   \institution{International School of Engineering, Faculty of Engineering, Chulalongkorn University}
   \city{Bangkok}
@@ -134,6 +135,7 @@
 \email{methasit.b@chula.ac.th}
 
 \author{Withawin Kraipetchara}
+\orcid{0009-0000-5772-1325}
 \affiliation{%
   \institution{International School of Engineering, Faculty of Engineering, Chulalongkorn University}
   \city{Bangkok}
@@ -141,6 +143,7 @@
 \email{withawin.k@chula.ac.th}
 
 \author{Krittin Kitjaruwannakul}
+\orcid{0009-0000-5772-1325}
 \affiliation{%
   \institution{International School of Engineering, Faculty of Engineering, Chulalongkorn University}
   \city{Bangkok}
