feat: introduction first draft

--- a/refs-main.bib
+++ b/refs-main.bib
@@ -93,3 +93,106 @@
   year = 	 2022,
   note = 	 {\url{http://www.ctan.org/pkg/babel}}}
 
+
+@article{recent-trends-in-tamp,
+  title = {Recent Trends in Task and Motion Planning for Robotics: A Survey},
+  volume = {55},
+  ISSN = {1557-7341},
+  url = {http://dx.doi.org/10.1145/3583136},
+  DOI = {10.1145/3583136},
+  number = {13s},
+  journal = {ACM Computing Surveys},
+  publisher = {Association for Computing Machinery (ACM)},
+  author = {Guo,  Huihui and Wu,  Fan and Qin,  Yunchuan and Li,  Ruihui and Li,  Keqin and Li,  Kenli},
+  year = {2023},
+  month = jul,
+  pages = {1–36}
+}
+
+@article{tamp,
+  title = {Integrated Task and Motion Planning},
+  volume = {4},
+  ISSN = {2573-5144},
+  url = {http://dx.doi.org/10.1146/annurev-control-091420-084139},
+  DOI = {10.1146/annurev-control-091420-084139},
+  number = {1},
+  journal = {Annual Review of Control,  Robotics,  and Autonomous Systems},
+  publisher = {Annual Reviews},
+  author = {Garrett,  Caelan Reed and Chitnis,  Rohan and Holladay,  Rachel and Kim,  Beomjoon and Silver,  Tom and Kaelbling,  Leslie Pack and Lozano-Pérez,  Tomás},
+  year = {2021},
+  month = may,
+  pages = {265–293}
+}
+
+@article{eval-application-challenges-llms,
+  title = {Benchmark Evaluations,  Applications,  and Challenges of Large Vision Language Models: A Survey},
+  url = {http://dx.doi.org/10.32388/GXR68Q},
+  DOI = {10.32388/gxr68q},
+  publisher = {Qeios Ltd},
+  author = {Li,  Zongxia and Wu,  Xiyang and Du,  Hongyang and Nghiem,  Huy and Shi,  Guangyao},
+  year = {2025},
+  month = jan 
+}
+
+@inproceedings{plangenllm,
+  title = {PlanGenLLMs: A Modern Survey of LLM Planning Capabilities},
+  url = {http://dx.doi.org/10.18653/v1/2025.acl-long.958},
+  DOI = {10.18653/v1/2025.acl-long.958},
+  booktitle = {Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  publisher = {Association for Computational Linguistics},
+  author = {Wei,  Hui and Zhang,  Zihao and He,  Shenghua and Xia,  Tian and Pan,  Shijia and Liu,  Fei},
+  year = {2025},
+  pages = {19497–19521}
+}
+
+@article{nsai,
+  title = {Neuro-Symbolic AI for Advanced Signal and Image Processing: A Review of Recent Trends and Future Directions},
+  url = {http://dx.doi.org/10.36227/techrxiv.174353019.93925639/v1},
+  DOI = {10.36227/techrxiv.174353019.93925639/v1},
+  publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+  author = {Fitas,  Ricardo},
+  journal = {TechRxiv Preprint},
+  year = {2025},
+  month = apr 
+}
+
+@misc{enhancing-interpret,
+      title={Enhancing Interpretability and Interactivity in Robot Manipulation: A Neurosymbolic Approach}, 
+      author={Georgios Tziafas and Hamidreza Kasaei},
+      year={2023},
+      eprint={2210.00858},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2210.00858}, 
+}
+
+@misc{code-as-symbolic-planner,
+      title={Code-as-Symbolic-Planner: Foundation Model-Based Robot Planning via Symbolic Code Generation}, 
+      author={Yongchao Chen and Yilun Hao and Yang Zhang and Chuchu Fan},
+      year={2025},
+      eprint={2503.01700},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2503.01700}, 
+}
+
+@inproceedings{llm-as-planning-formalizers,
+  title = {LLMs as Planning Formalizers: A Survey for Leveraging Large Language Models to Construct Automated Planning Models},
+  url = {http://dx.doi.org/10.18653/v1/2025.findings-acl.1291},
+  DOI = {10.18653/v1/2025.findings-acl.1291},
+  booktitle = {Findings of the Association for Computational Linguistics: ACL 2025},
+  publisher = {Association for Computational Linguistics},
+  author = {Tantakoun,  Marcus and Muise,  Christian and Zhu,  Xiaodan},
+  year = {2025},
+  pages = {25167–25188}
+}
+
+@misc{lam,
+      title={Large Action Models: From Inception to Implementation}, 
+      author={Lu Wang and Fangkai Yang and Chaoyun Zhang and Junting Lu and Jiaxu Qian and Shilin He and Pu Zhao and Bo Qiao and Ray Huang and Si Qin and Qisheng Su and Jiayi Ye and Yudi Zhang and Jian-Guang Lou and Qingwei Lin and Saravan Rajmohan and Dongmei Zhang and Qi Zhang},
+      year={2025},
+      eprint={2412.10047},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI},
+      url={https://arxiv.org/abs/2412.10047}, 
+}
