--- a/paper-main.tex
+++ b/paper-main.tex
@@ -170,18 +170,11 @@
 %% The abstract is a short summary of the work to be presented in the
 %% article.
 \begin{abstract}
-%One or two sentences providing a basic introduction to the field,
-%comprehensible to a scientist in any discipline.
 The realization of intelligent robots, operating autonomously and interacting with other intelligent agents, human or artificial, requires the integration of environment perception, reasoning, and action.
-%Two to three sentences of more detailed background, comprehensible %to scientists in related disciplines.
 Classic Artificial Intelligence techniques for this purpose, focusing on \textit{symbolic} approaches, have long-ago hit the scalability wall on compute and memory costs. Advances in Large Language Models in the past decade (\textit{neural} approaches) have resulted in unprecedented displays of capability, at the cost of control, explainability, and interpretability. 
-%One sentence clearly stating the general problem being addressed by this particular study.
 Large Action Models aim at extending Large Language Models to encompass the full perception, reasoning, and action cycle; requiring substantially more comprehensive training and suffering from the same deficiencies.
-%One sentence summarizing the main result (with the words “here we show” or their equivalent).
 Here, we show it is possible to build competent Large Action Models using extant building-blocks, and that their control, interpretability, and explainability can be effected by incorporating symbolic wrappers, and associated verification, on their outputs, achieving \textit{neuro-symbolic} solutions for intelligent robots.
-%Two or three sentences explaining what the main result reveals in direct comparison to what was thought to be the case previously, or how the main result adds to previous knowledge
 Our experiments on a multi-modal robot show a Large Action Model intelligence can be achieved by the composition of compute-efficient smaller models, where action verification and explainability is driven by the generation and verification of Planning Domain Definition Language code.
-%One or two sentences to put the results into a more general context
 These results can support practitioners in the design and development of robotic Large Action Models across novel industries, and shed some light on the the ongoing challenges that must be addressed in the field.
 
 
@@ -254,6 +247,21 @@ These results can support practitioners in the design and development of robotic
 \end{itemize}
 
 \par The remainder of this paper is organized as follows: Section \ref{sec:arch}... \par\textcolor{red}{\textbf{describe structure here when everything else is done}}
+\section{Introduction}
+
+Intelligent robots capable of perceiving their surroundings, reasoning about tasks, and executing reliable actions are increasingly essential in engineering, manufacturing, and everyday collaborative settings. Their potential impact lies not only in automating repetitive labor, but in enabling fluid human–robot collaboration where robots understand user intent, adapt to changing environments, and provide transparent, verifiable reasoning. Achieving this, however, requires solving the longstanding integration problem: connecting perception, language, symbolic reasoning, and physical control into a coherent system.
+
+\par \textcolor{black}{Classic \textit{symbolic} AI approaches offer strong guarantees on correctness, interpretability, and verification, but scale poorly with the complexity and variability of real-world environments~\cite{tamp, recent-trends-in-tamp}. Conversely, \textit{neural} methods—particularly Large Language Models (LLMs) and Vision-Language Models (VLMs)—excel at perception, abstraction, and generalization, but struggle with controllability, reliability, and the prevention of hallucinations~\cite{eval-application-challenges-llms}. These limitations hinder their deployment in safety-critical robotic systems, where incorrect reasoning can lead to dangerous actions~\cite{plangenllm}.}
+
+\par \textcolor{black}{Large Action Models (LAMs) have recently been proposed as a unifying paradigm, extending LLM-style reasoning to include perception and physical action. However, current LAMs require massive training resources, lack interpretability, and provide limited mechanisms for verifying correctness or constraining behavior.} 
+
+\par \textcolor{black}{In this work, we propose that competent LAM intelligence can be achieved by the composition of compute-efficient smaller models, where action verification is driven by symbolic logic.} Specifically, this paper offers the following contributions:
+
+\begin{itemize}
+  \item \textbf{We describe a neuro-symbolic architecture that constructs a LAM without additional training.} By leveraging extant models (such as SAM and CLIP) in a hierarchical structure, we demonstrate how to decouple perception from reasoning to achieve generalization in unstructured environments.
+  \item \textbf{We introduce a mechanism for control and explainability via PDDL generation.} We show that by treating the LLM as a "modeler" that generates Planning Domain Definition Language (PDDL) code, we can enforce symbolic verification on the robot's output, ensuring actions are logically sound before execution~\cite{code-as-symbolic-planner, llm-as-planning-formalizers}.
+  \item \textbf{We validate this hypothesis through a prototype engineering assistant.} We provide experimental evidence on a Universal Robots (UR) arm, demonstrating that this composite approach successfully grounds natural language commands into safe, interpretable physical actions.
+\end{itemize}
 
 \section{Composing Large Action Model Architectures for Intelligent Robots}\label{sec:arch}
 
