feat: add lam paper

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -251,11 +251,11 @@ These results can support practitioners in the design and development of robotic
 
 Intelligent robots capable of perceiving their surroundings, reasoning about tasks, and executing reliable actions are increasingly essential in engineering, manufacturing, and everyday collaborative settings. Their potential impact lies not only in automating repetitive labor, but in enabling fluid human–robot collaboration where robots understand user intent, adapt to changing environments, and provide transparent, verifiable reasoning. Achieving this, however, requires solving the longstanding integration problem: connecting perception, language, symbolic reasoning, and physical control into a coherent system.
 
-\par \textcolor{black}{Classic \textit{symbolic} AI approaches offer strong guarantees on correctness, interpretability, and verification, but scale poorly with the complexity and variability of real-world environments~\cite{tamp, recent-trends-in-tamp}. Conversely, \textit{neural} methods—particularly Large Language Models (LLMs) and Vision-Language Models (VLMs)—excel at perception, abstraction, and generalization, but struggle with controllability, reliability, and the prevention of hallucinations~\cite{eval-application-challenges-llms}. These limitations hinder their deployment in safety-critical robotic systems, where incorrect reasoning can lead to dangerous actions~\cite{plangenllm}.}
+\par Classic \textit{symbolic} AI approaches offer strong guarantees on correctness, interpretability, and verification, but scale poorly with the complexity and variability of real-world environments~\cite{tamp, recent-trends-in-tamp}. Conversely, \textit{neural} methods, particularly Large Language Models (LLMs) and Vision-Language Models (VLMs), excel at perception, abstraction, and generalization, but struggle with controllability, reliability, and the prevention of hallucinations~\cite{eval-application-challenges-llms}. These limitations hinder their deployment in safety-critical robotic systems, where incorrect reasoning can lead to dangerous actions~\cite{plangenllm}.
 
-\par \textcolor{black}{Large Action Models (LAMs) have recently been proposed as a unifying paradigm, extending LLM-style reasoning to include perception and physical action. However, current LAMs require massive training resources, lack interpretability, and provide limited mechanisms for verifying correctness or constraining behavior.} 
+\par Large Action Models (LAMs) have recently emerged as a transformative paradigm to address these gaps, marking a fundamental shift from passive language processing to active, real-world engagement~\cite{lam}.  Unlike traditional LLMs that are limited to text generation, LAMs are specifically designed to interpret abstract user intentions and generate executable action sequences in dynamic environments~\cite{lam}. However, this transition introduces significant challenges. As noted in recent studies, the ability to manipulate the physical world is a double-edged sword: unlike textual hallucinations, errors in action execution can lead to irreversible physical consequences or safety hazards~\cite{lam}. Furthermore, current LAMs often struggle with scalability and generalizability, typically requiring extensive data collection and retraining when applied to new environments~\cite{lam}. Consequently, a major open question is whether it is possible to construct practical, explainable, and safe LAMs without end-to-end training—using only existing small models and symbolic structures to ensure verification.
 
-\par \textcolor{black}{In this work, we propose that competent LAM intelligence can be achieved by the composition of compute-efficient smaller models, where action verification is driven by symbolic logic.} Specifically, this paper offers the following contributions:
+\par In this work, we propose that competent LAM intelligence can be achieved by the composition of compute-efficient smaller models, where action verification is driven by symbolic logic. Specifically, this paper offers the following contributions:
 
 \begin{itemize}
   \item \textbf{We describe a neuro-symbolic architecture that constructs a LAM without additional training.} By leveraging extant models (such as SAM and CLIP) in a hierarchical structure, we demonstrate how to decouple perception from reasoning to achieve generalization in unstructured environments.
