--- a/refs-main.bib
+++ b/refs-main.bib
@@ -196,3 +196,13 @@
       primaryClass={cs.AI},
       url={https://arxiv.org/abs/2412.10047}, 
 }
+
+@misc{lram,
+      title={A Large Recurrent Action Model: xLSTM enables Fast Inference for Robotics Tasks},
+      author={Thomas Adler and Günter Klambauer and Johannes Brandstetter and Sepp Hochreiter and Razvan Pascanu and Vihang Patil and Maximilian Beck and Korbinian Pöppel and Thomas Schmied},
+      year={2025},
+      eprint={2410.22391},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2410.22391},
+}
