fix: change ASR to speech module

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -272,7 +272,7 @@ These results can support practitioners in the design and development of robotic
 
 \subsection{Perception Module}
 
-\subsection{Automatic Speech Recognition Module}
+\subsection{Speech Module}
 
 \subsection{Planning Module}
 
@@ -282,7 +282,7 @@ These results can support practitioners in the design and development of robotic
 
 \subsection{Perception Module}
 
-\subsection{Automatic Speech Recognition Module}
+\subsection{Speech Module}
 
 \subsection{Planning Module}
 
