feat: add Symbolic Wrapping of LAMs diagram

--- a/paper-main.tex
+++ b/paper-main.tex
@@ -291,13 +291,21 @@ This stratified design allows the robot to benefit from the flexibility of moder
 
 \subsection{Symbolic Wrapping of LAMs}
 
-To address the lack of interpretability and control in Large Action Models, we implement a "symbolic wrapping" strategy. This approach restricts the Large Language Model (LLM) from generating executable robot code directly. Instead, the model is constrained to produce intermediate symbolic representations, structured plans or formal logic definitions, which act as a verification layer before any physical motion occurs.
+To address the lack of interpretability and control in Large Action Models, we implement a "symbolic wrapping" strategy. This approach restricts the Large Language Model (LLM) from generating executable robot code directly. Instead, the model is constrained to produce intermediate symbolic representations, structured plans or formal logic definitions, which act as a verification layer before any physical motion occurs. An overview of this architecture, illustrating the workflows for both pipelines, is depicted in Figure~\ref{fig:symbolic_wrapping}.
 
-In our neuro-symbolic pipeline, we reduce the risk of invalid symbolic outputs by decoupling the domain definition from the problem instance. The robot’s constraints and capabilities are hard-coded in a static symbolic framework, the robot's current state is deterministically determined, while the LLM generates the dynamic problem state at runtime. By feeding this symbolic representation into a deterministic solver, we ensure that the output is not just syntactically correct, but logically solvable. If the LLM "hallucinates" an impossible goal, the solver fails to find a plan, effectively trapping the error in the software layer rather than causing a physical failure.
+\begin{figure}[tb]
+    \centering
+    \includegraphics[width=\linewidth]{images/symbolic_wrapping_diagram.png}
+    \caption{Overview of Symbolic Wrapping Architecture.}
+    \label{fig:symbolic_wrapping}
+    \Description{Overview of Symbolic Wrapping Architecture}{Overview of the Symbolic Wrapping Architecture. The diagram illustrates how stochastic Large Language Models are insulated by deterministic symbolic layers. Both the neuro-symbolic and neural-direct pipelines generate an intermediate, verifiable symbolic artifact before any physical execution is attempted, enabling logic-based verification and human-in-the-loop intervention.}
+\end{figure}
+
+In our neuro-symbolic pipeline, we reduce the risk of invalid symbolic outputs by decoupling the domain definition from the problem instance. The robot’s constraints and capabilities are hard-coded in a static symbolic framework, and the robot's current state is deterministically determined, while the LLM generates the dynamic problem state at runtime. By feeding this hybrid representation into a deterministic solver, we ensure that the output is not just syntactically correct, but logically solvable. If the LLM "hallucinates" an impossible goal, the solver fails to find a plan, effectively trapping the error in the software layer rather than causing a physical failure.
 
 Similarly, in the neural-direct pipeline, we replace arbitrary code generation with structured tool usage. The LLM is restricted to selecting from a finite set of deterministic, pre-verified APIs. This limits the action space to safe operations and ensures that the model's intent is captured in a discrete list of sub-tasks.
 
-This intermediate symbolic layer is critical for debugging and verification. Because the output is a structured interpretable artifact (a plan or task list) rather than opaque neural weights or raw code, it allows for a "human-in-the-loop" review process where operators can confirm or revise the plan before actual execution. 
+This intermediate symbolic layer is critical for debugging and verification. Because the output is a structured interpretable artifact (a plan or task list) rather than opaque neural weights or raw code, it allows for a "human-in-the-loop" review process where operators can confirm or revise the plan before actual execution.
 
 \section{Case Study: a Human-in-the-Loop Intelligent Robotic Arm}
 
